# spec

./: .env.example  .gitignore  CLAUDE.MD  Dockerfile  Dockerfile.registry  README.MD  docker-compose.yml  fly.toml  pyproject.toml  vendor-manifest.json
.github/workflows/: deploy-registry.yml  deploy.yml
docs/: CNAME  contact.html  index.html  styles.css  theme.js
examples/: berlin-hacker-space.json  chennai-threads.json  helsinki-maker-store.json
sdk/: __init__.py
sdk/agent/: __init__.py
src/agent/: __init__.py  agent.py  multi_agent.py  tools.py  wallet.py
src/registry/: __init__.py  health.py  main.py  models.py  store.py
src/spec/: __init__.py
src/vendor_server/: __init__.py  catalog.py  main.py  models.py  payment.py  vendors.py  x402_verifier.py
tests/: test_agent.py  test_multi_agent.py  test_registry.py  test_sdk.py  test_vendor_server.py  test_x402.py
